# v2x-mesages

./: CMakeLists.txt  Jenkinsfile  README.md  package.xml  review.txt
install/: local_setup.sh  setup.sh  setup.zsh
install/v2x/share/v2x/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
msg/: Acceleration3dWithConfidence.msg  AccelerationCartesian.msg  AccelerationComponent.msg  AccelerationMagnitude.msg  AccelerationPolarWithZ.msg  CartesianAngle.msg  VehicleLength.msg
